Teacher document upload API added