@@ -1,16 +1,17 @@
 package com.jagratichildrenvidyamandir.mapper;
 
 import com.jagratichildrenvidyamandir.dto.TeacherDTO;
-import com.jagratichildrenvidyamandir.entity.ClassEntity;
 import com.jagratichildrenvidyamandir.entity.Teacher;
 import org.springframework.stereotype.Component;
 
-import java.util.List;
+import java.util.ArrayList;
+import java.util.stream.Collectors;
 
 @Component
 public class TeacherMapper {
 
-    public Teacher toEntity(TeacherDTO dto, List<ClassEntity> classes) {
+    // Convert DTO → Entity
+    public Teacher toEntity(TeacherDTO dto) {
         Teacher teacher = new Teacher();
         teacher.setTeacherId(dto.getTeacherId());
         teacher.setName(dto.getName());
@@ -22,26 +23,32 @@ public class TeacherMapper {
         teacher.setDateOfBirth(dto.getDateOfBirth());
         teacher.setAadharNo(dto.getAadharNo());
         teacher.setAddress(dto.getAddress());
-        teacher.setClasses(classes);
         return teacher;
     }
 
+    // Convert Entity → DTO
     public TeacherDTO toDTO(Teacher teacher) {
         TeacherDTO dto = new TeacherDTO();
         dto.setTeacherId(teacher.getTeacherId());
         dto.setName(teacher.getName());
         dto.setEmail(teacher.getEmail());
         dto.setPhone(teacher.getPhone());
+        dto.setPassword(teacher.getPassword());
         dto.setEducationalDetails(teacher.getEducationalDetails());
         dto.setYearOfExperience(teacher.getYearOfExperience());
         dto.setDateOfBirth(teacher.getDateOfBirth());
         dto.setAadharNo(teacher.getAadharNo());
         dto.setAddress(teacher.getAddress());
-        // Map class IDs
-        List<Integer> classIds = teacher.getClasses().stream()
-                .map(ClassEntity::getClassId)
-                .toList();
-        dto.setClassIds(classIds);
+
+        // Map class names only
+        if (teacher.getClasses() != null && !teacher.getClasses().isEmpty()) {
+            dto.setClassNames(teacher.getClasses().stream()
+                    .map(c -> c.getClassName())
+                    .collect(Collectors.toList()));
+        } else {
+            dto.setClassNames(new ArrayList<>());
+        }
+
         return dto;
     }
 }
